syntax = "proto3";
package spec;


message Proto3OptionalsMessage {
    optional string string_field = 1;
    optional bytes bytes_field = 2;
    optional TestEnum enum_field = 3;
    TestMessage message_field = 4;

    enum TestEnum {
        ANY = 0;
        YES = 1;
        NO = 2;
    }
    message TestMessage {
        string field = 1;
    }

}
