syntax = "proto3";
package spec;

option optimize_for = SPEED;

message OptimizeForSpeedMessage {
    double double_field = 1;
    float float_field = 2;
}
